--- a/index2.html
+++ b/index2.html
@@ -6,12 +6,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>fokira website </title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styling2.css">
 </head>
 
 <body>
-    <h1>
-        let's strat
-    </h1>
+    <section>
+        <div class="first">
+            <h1>
+                welcome everyone to <p><span style="font-style: italic;color: orange;font-weight:bold;">fokira</span>
+                    world</p>
+            </h1>
+            <h3>Design web and can develop the web site</h3>
+            <p>
+                Hey! I am sadia sultana satu . I'm a student .Now studying in Computer Science and Engineering at
+                University
+                of
+                Libearl Arts Bangladesh. .I am very dedicated and passsionate about my work. I'm cheerful person . I
+                love to
+                meet new people and expolre myself.
+            </p>
+            <a class="link" target="blank" href="https://www.linkedin.com/in/jhankar/">Hire him </a>
+        </div>
+        <div class="first">
+            <img src="jhankar image/jhankar.png" alt="">
+        </div>
+
+    </section>
 
 </body>
 
