--- a/index2.html
+++ b/index2.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <section>
+    <section class="s1">
         <div class="first">
             <h1>
                 welcome everyone to <p><span style="font-style: italic;color: orange;font-weight:bold;">fokira</span>
@@ -35,6 +35,24 @@
         </div>
         <div class="first">
             <img src="jhankar image/jhankar.png" alt="">
+        </div>
+
+    </section>
+    <section class="s2">
+        <div class="second">
+            <img src="jhankar image/jhankar2.png" alt="">
+        </div>
+        <div class="second">
+            <h1>
+                Make <span style="font-style: italic;color: orange;font-weight:bold;">Dream</span>
+                big
+            </h1>
+            <h3>Become a web developer</h3>
+            <p>
+                I already learned the basic html,css,c programming . I can build a simple website .but my goal is to
+                join brainstation as a web developer .
+            </p>
+            <a class="link" target="blank" href="https://www.linkedin.com/in/jhankar/">Get his CV </a>
         </div>
 
     </section>
