--- a/index2.html
+++ b/index2.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <section class="s1">
+    <section class="s1 common">
         <div class="first">
             <h1>
                 welcome everyone to <p><span style="font-style: italic;color: orange;font-weight:bold;">fokira</span>
@@ -38,7 +38,7 @@
         </div>
 
     </section>
-    <section class="s2">
+    <section class="s2 common">
         <div class="second">
             <img src="jhankar image/jhankar2.png" alt="">
         </div>
@@ -54,6 +54,48 @@
             </p>
             <a class="link" target="blank" href="https://www.linkedin.com/in/jhankar/">Get his CV </a>
         </div>
+
+    </section>
+    <section class="ex">
+        <h1>Experience</h1>
+        <div class="common">
+            <div id="d1" class="shadow">
+                <h2>
+                    Baby web developer
+                </h2>
+                <h3 style="color: orange;">
+                    2020 to 2021 | Learning process is on
+                </h3>
+                <p>
+                    Now i am just a new born baby devloper . And i am learning other metarials of developing.
+                    Hopefully
+                    very
+                    soon i will gain all the skill about developing . and can join a company as a web developer
+
+
+
+                </p>
+            </div>
+            <div id="d2" class="shadow">
+                <h2>
+                    Full stack web developer
+                </h2>
+                <h3 style="color: orange;">
+                    2021 to 2023 | mission to pro level developer
+                </h3>
+                <p>
+                    i am hoping that i'll become a full stack developer . but Sometimes hope is shattered. And those
+                    hopes
+                    remain dreams . Let's see how far we can go
+
+                </p>
+            </div>
+
+        </div>
+        <footer>
+            <p style="text-align: center;">© Habibur Rahman Habib 2021,a programmer initiative.</p>
+        </footer>
+
 
     </section>
 
